# BMP-24-redactor

./: README.md
image_processor/: CMakeLists.txt  image_processor.cpp
image_processor/lib/: bmp_picture.cpp  bmp_picture.h  color.cpp  color.h  filters_factory.cpp  filters_factory.h  help.cpp  io.cpp  io.h  parser.cpp  parser.h  weighted_amount_of_colors.cpp  weighted_amount_of_colors.h
image_processor/lib/filters/: crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filter.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  pixellate.cpp  pixellate.h  sharpening.cpp  sharpening.h
